added swagger & goals
